# Driftway

./: .env.example  .gitignore  API_TESTING.md  README.md  SETUP_COMPLETE.md  client-example.js  package-lock.json  package.json  start.bat  start.js  start.ps1  test-api.html  websocket-test.html
Driftway-Microservices/: .env  .env.example  Makefile  QUICKSTART.md  README.md  docker-compose.yml  simple-server-alt.go  simple-server.go  start-demo.ps1
Driftway-Microservices/api-gateway/: Dockerfile  go.mod  go.sum  main.go
Driftway-Microservices/docs/: API.md  ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  DEVELOPMENT.md  TROUBLESHOOTING.md  api-gateway.md  text-channels.md  voice-channels.md
Driftway-Microservices/voice-channels/: CMakeLists.txt  Dockerfile
Driftway-Microservices/voice-channels/include/: audio_processor.h  database_client.h  http_server.h  redis_client.h  voice_channel.h  voice_channel.hpp  voice_server.h  webrtc_handler.h
Driftway-Microservices/voice-channels/src/: audio_processor.cpp  database_client.cpp  http_server.cpp  main.cpp  redis_client.cpp  voice_channel.cpp  voice_server.cpp  webrtc_handler.cpp  websocket_handler.cpp
Driftway-Microservices/voice-channels/src/codec/: opus_codec.cpp
Driftway-Microservices/voice-channels/src/network/: rtp_handler.cpp  stun_handler.cpp
Driftway-TEXT/: .gitignore  Dockerfile  ELIXIR_SETUP.md  demo.bat  deploy.ps1  deploy.sh  docker-compose.yml  install_elixir.ps1  mix.exs  monitoring_advanced.sh  nginx.conf  start_service.bat  test_server.py
client/: index.html  package-lock.json  package.json  server.js  test-api.html
client/js/: app.js  (+1 more)
data/: driftway.db
src/: index.ts  server.ts
tests/: dbService.test.ts
web/: package.json  pnpm-lock.yaml
(+106 files in other folders)
